# categorisation-algorithmique

./: README.md  analyse_demission.ipynb  eval.md  pyproject.toml
