[project]
name = "analyse_demission"
version = "0.1.0"
description = "Analyse de la démission chez TechNova"

# Dépendances nécessaires au notebook
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (==1.6.1)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.48.0,<0.49.0)",
    "imbalanced-learn (==0.12.4)",
    "numpy",
    "matplotlib",
    "statsmodels (>=0.14.5,<0.15.0)",
    "notebook (>=7.4.4,<8.0.0)"
]

[tool.poetry.dependencies]
python = "^3.9"